added send request functionality
